# plugin-things

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
.cargo/: config.toml
.github/workflows/: build.yml
examples/auv3-demo/: Cargo.toml  Factory.h
examples/auv3-demo/Demo/Demo/: ContentView.swift  DemoApp.swift
examples/auv3-demo/Demo/Demo.xcodeproj/: project.pbxproj
examples/auv3-demo/Demo/Demo.xcodeproj/xcshareddata/xcschemes/: DemoExtension.xcscheme
examples/auv3-demo/Demo/Demo/Common/: TypeAliases.swift
examples/auv3-demo/Demo/Demo/Common/Audio/: SimplePlayEngine.swift
examples/auv3-demo/Demo/Demo/Common/MIDI/: MIDIManager.swift
examples/auv3-demo/Demo/Demo/Common/String/: StringHelpers.swift
examples/auv3-demo/Demo/Demo/Common/UI/: ViewControllerRepresentable.swift
examples/auv3-demo/Demo/Demo/Model/: AudioUnitHostModel.swift  AudioUnitViewModel.swift
examples/auv3-demo/Demo/DemoExtension/: Info.plist  README.md
examples/auv3-demo/Demo/DemoExtension/Common/: DemoExtension-Bridging-Header.h
examples/auv3-demo/Demo/DemoExtension/Common/Audio Unit/: DemoExtensionAudioUnit.h  DemoExtensionAudioUnit.mm
examples/auv3-demo/Demo/DemoExtension/Common/DSP/: DemoExtensionAUProcessHelper.hpp  DemoExtensionBufferedAudioBus.hpp
examples/auv3-demo/Demo/DemoExtension/Common/Parameters/: ParameterSpecBase.swift
examples/auv3-demo/Demo/DemoExtension/Common/UI/: AudioUnitViewController.swift  ObservableAUParameter.swift
examples/auv3-demo/Demo/DemoExtension/Common/UI/Base.lproj/: AudioUnitViewController.xib
examples/auv3-demo/Demo/DemoExtension/Common/Utility/: CrossPlatform.swift  String+Utils.swift
examples/auv3-demo/Demo/DemoExtension/DSP/: DemoExtensionDSPKernel.hpp
examples/auv3-demo/Demo/DemoExtension/Parameters/: DemoExtensionParameterAddresses.h  Parameters.swift
examples/auv3-demo/Demo/DemoExtension/UI/: DemoExtensionMainView.swift  ParameterSlider.swift
examples/auv3-demo/app/: Factory.h
examples/auv3-demo/app/App/: DemoApp.swift
examples/auv3-demo/app/Demo.xcodeproj/: project.pbxproj
examples/auv3-demo/app/Extension/: DemoExtension.m  Info.plist
examples/auv3-demo/src/: audio_toolbox.rs  extension.rs  factory.rs  lib.rs  main.rs
examples/clap-demo/: Cargo.toml  main.slint  slider.slint
examples/clap-demo/src/: lib.rs
examples/demo/: Cargo.toml  build.rs  knob.slint  main.slint  slider.slint
examples/demo/src/: lib.rs
examples/gain-plugin/: Cargo.toml  README.md  build.rs
examples/gain-plugin/src/: editor.rs  lib.rs  main.rs  parameters.rs  plugin.rs  processor.rs  view.rs
examples/gain-plugin/ui/: main.slint
examples/plugin-wrapper-demo/: Cargo.toml
examples/plugin-wrapper-demo/src/: lib.rs
examples/vst3-demo/: Cargo.toml
examples/vst3-demo/src/: edit_controller.rs  factory.rs  lib.rs  processor.rs
nih_plug_slint/: Cargo.toml  README.md
nih_plug_slint/components/: knob.slint  parameter.slint  slider.slint
nih_plug_slint/slint/: parameter.slint
nih_plug_slint/src/: editor.rs  lib.rs  platform.rs  plugin_component_handle.rs  raw_window_handle_adapter.rs  window_adapter.rs
plinth-core/: Cargo.toml
plinth-core/src/: collections.rs  lib.rs  signals.rs  util.rs
plinth-core/src/buffers/: buffer.rs
plinth-core/src/collections/: copy_from_slice.rs  interleave_iterator.rs
plinth-core/src/signals/: channels.rs  frame.rs  frame_iterator.rs  frames_iterator.rs  ptr_signal.rs  signal.rs  signal_base.rs  signal_frame.rs  slice.rs
plinth-core/src/util/: ptr.rs  range.rs
plinth-derive/: Cargo.toml
plinth-derive/src/: enums.rs  kind.rs  lib.rs
plinth-plugin/: Cargo.toml  build.rs
plinth-plugin/include/: plinth_auv3.h
plinth-plugin/src/: editor.rs  error.rs  event.rs  formats.rs  host.rs  lib.rs  parameters.rs  plugin.rs  processor.rs  string.rs  transport.rs  window_handle.rs
plinth-plugin/src/formats/: auv3.rs  clap.rs  standalone.rs  vst3.rs
plinth-plugin/src/formats/auv3/: au_render_event.rs  event.rs  host.rs  macros.rs  parameters.rs  plugin.rs  reader.rs  util.rs  wrapper.rs  writer.rs
plinth-plugin/src/formats/clap/: descriptor.rs  entry_point.rs  event.rs  extensions.rs  factory.rs  features.rs  host.rs  macros.rs  parameters.rs  plugin.rs  plugin_instance.rs  stream.rs  transport.rs
plinth-plugin/src/formats/clap/extensions/: audio_ports.rs  gui.rs  latency.rs  note_ports.rs  params.rs  render.rs  state.rs  tail.rs  timer_support.rs
plinth-plugin/src/formats/standalone/: audio.rs  config.rs  host.rs  macros.rs  midi.rs  parameters.rs  plugin.rs  runner.rs
plinth-plugin/src/formats/vst3/: component.rs  error.rs  event.rs  factory.rs  host.rs  key_codes.rs  macros.rs  parameters.rs  plugin.rs  stream.rs  subcategories.rs  transport.rs  view.rs
plinth-plugin/src/parameters/: bool.rs  enums.rs  error.rs  float.rs  formatter.rs  group.rs  info.rs  int.rs  kind.rs  map.rs  parameter.rs  parameters.rs  range.rs
plugin-canvas/: Cargo.toml  README.md
plugin-canvas-slint/: Cargo.toml
plugin-canvas-slint/src/: editor.rs  lib.rs  platform.rs  plugin_component_handle.rs  view.rs  window_adapter.rs
plugin-canvas-slint/ui/: parameter.slint
plugin-canvas/src/: cursor.rs  dimensions.rs  drag.rs  drag_drop.rs  error.rs  event.rs  keyboard.rs  lib.rs  platform.rs  thread_bound.rs  window.rs
plugin-canvas/src/platform/: interface.rs  mac.rs  mod.rs  os_window_handle.rs  win32.rs  x11.rs
plugin-canvas/src/platform/mac/: display_link.rs  keyboard.rs  mod.rs  types.rs  view.rs  window.rs
plugin-canvas/src/platform/win32/: cursors.rs  drop_target.rs  key_codes.rs  keyboard.rs  message_hook.rs  message_window.rs  mod.rs  version.rs  window.rs  window_handle.rs
plugin-canvas/src/platform/x11/: cursors.rs  keyboard.rs  locale.rs  window.rs
plugin-wrapper/: Cargo.toml
plugin-wrapper/src/: lib.rs  plugin.rs
