[package]
name = "nih_plug_slint"
version = "0.0.0"
edition = "2021"

authors = ["Jussi Viiri <jussi@viiri-audio.com>"]
readme = "README.md"
repository = "https://github.com/ilmai/plugin-things"
license = "MIT"

[dependencies]
cursor-icon.workspace = true
i-slint-core.workspace = true
i-slint-renderer-skia.workspace = true
nih_plug.workspace = true
plugin-canvas.workspace = true
raw-window-handle.workspace = true
slint.workspace = true
