[package]
name = "plinth-derive"
version = "0.1.0"
edition = "2021"

authors = ["Jussi Viiri <jussi@viiri-audio.com>"]
readme = "README.md"
repository = "https://github.com/ilmai/plugin-things"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
plinth-plugin.workspace = true
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
