[package]
name = "plinth-plugin"
version = "0.1.0"
edition = "2024"

authors = ["Jussi Viiri <jussi@viiri-audio.com>"]
readme = "README.md"
repository = "https://github.com/ilmai/plugin-things"
license = "MIT"

[features]
standalone = ["dep:cpal", "dep:midir", "dep:winit"]

[dependencies]
atomic_refcell = "0.1"
clap-sys = "0.5"
log.workspace = true
num-derive = "0.4"
num-traits.workspace = true
plinth-core.workspace = true
portable-atomic.workspace = true
raw-window-handle.workspace = true
rtrb = "0.3"
thiserror = "2"
vst3 = "0.3"
widestring = "1"
xxhash-rust = { version = "0.8", features = ["xxh32"] }
# standalone features
winit = { version = "0.30", optional = true }
cpal = { version = "0.17", optional = true }
midir = { version = "0.10", optional = true }

[build-dependencies]
bindgen = "0.72"

[dev-dependencies]
approx = "0.5"
