[package]
name = "plugin-canvas-slint"
version = "0.1.0"
edition = "2024"

authors = ["Jussi Viiri <jussi@viiri-audio.com>"]
readme = "README.md"
repository = "https://github.com/ilmai/plugin-things"
license = "MIT"

[dependencies]
cursor-icon.workspace = true
i-slint-core.workspace = true
i-slint-renderer-skia.workspace = true
plugin-canvas.workspace = true
raw-window-handle.workspace = true
slint.workspace = true
