[package]
name = "plugin-canvas"
version = "0.0.0"
edition = "2021"

authors = ["Jussi Viiri <jussi@viiri-audio.com>"]
readme = "README.md"
repository = "https://github.com/ilmai/plugin-things"
license = "MIT"

[dependencies]
cursor-icon.workspace = true
lazy_static = "1.4"
raw-window-handle.workspace = true
uuid = { version = "1.4", features = ["fast-rng", "v4"] }

[target.'cfg(target_os="linux")'.dependencies]
nix = { version = "0.27", features = ["poll"] }
sys-locale = "0.3"
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }
xcb = { version = "1.2", features = ["as-raw-xcb-connection", "xlib_xcb"] }

[target.'cfg(target_os="macos")'.dependencies]
core-graphics = "0.23"
objc2 = { version = "0.4", features = ["verify"] }

[target.'cfg(target_os="macos")'.dependencies.icrate]
version = "0.0"
features = [
    "AppKit",
    "AppKit_NSCursor",
    "AppKit_NSEvent",
    "AppKit_NSPasteboard",
    "AppKit_NSPasteboardItem",
    "AppKit_NSScreen",
    "AppKit_NSTrackingArea",
    "AppKit_NSView",
    "AppKit_NSWindow",
    "Foundation_NSArray",
    "Foundation_NSAttributedString",
    "Foundation_NSData",
    "Foundation_NSInvocationOperation",
    "Foundation_NSOperationQueue",
    "Foundation_NSURL",
]

[target.'cfg(target_os="windows")'.dependencies]
libloading = "0.8"

[target.'cfg(target_os="windows")'.dependencies.windows]
version = "0.54"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ole",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]
