[package]
name = "auv3-demo"
version = "0.0.0"
edition = "2021"
description = "AUv3 plugin example"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
icrate = { version = "0.0", features = ["AppKit", "AppKit_NSViewController", "Foundation"] }
objc2.workspace = true

[package.metadata.bundle]
identifier = "com.viiri-audio.plugin-things.auv3-demo"
