[package]
name = "clap-demo"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
clack-extensions = { git = "https://github.com/prokopyl/clack", features = ["audio-ports", "clack-plugin", "params"] }
clack-plugin = { git = "https://github.com/prokopyl/clack" }
plugin-canvas.workspace = true
portable-atomic = { version = "1.6", default-features = false, features = ["float"] }
slint.workspace = true

[build-dependencies]
slint-build = "1.3"
