[package]
name = "gain-plugin"
version = "0.1.0"
edition = "2024"

[features]
standalone = ["plinth-plugin/standalone"]

[lib]
crate-type = ["cdylib", "lib", "staticlib"]

[[bin]]
name = "gain-standalone"
path = "src/main.rs"
required-features = ["standalone"]

[dependencies]
plinth-derive.workspace = true
plinth-plugin.workspace = true
plugin-canvas-slint.workspace = true
serde = "1"
serde_json = "1"
slint = { version = "1", default-features = false, features = ["accessibility", "compat-1-2", "std"] }

[build-dependencies]
slint-build = "1"
